GSE_final.ipynb

--- a/GSE_final.ipynb
+++ b/GSE_final.ipynb
@@ -42,7 +42,7 @@
     "    powers_of_rho_normalized = [np.linalg.matrix_power(rho_normalized, i) for i in range(m + 1)]\n",
     "    \n",
     "\n",
-    "    #H_MATRIX NEEDS TO BE PASSED!!!\n",
+    "    #H = hamiltonian matrix NEEDS TO BE PASSED!!!\n",
     "\n",
 
     "\n",
@@ -90,6 +90,7 @@
     "    \n",
     "    Returns: \n",
     "    - float: the expectation value of the observable for the error-mitigated state.\n",
+    "    - dictionary of other useful information\n",
     "    \"\"\"\n",
     "    \n",
     "    def is_valid_starting_density_matrix(rho):\n",
